--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,14 @@ unstable = []
 default = []
 use-serde = ["bitcoin/use-serde", "serde"]
 rand = ["bitcoin/rand"]
+use-schemars = ["bitcoin/use-schemars"]
 
 [dependencies]
 bitcoin = "0.26"
+
+[dependencies.schemars]
+version = "0.8.0"
+optional = true
 
 [dependencies.serde]
 version = "1.0"
